--- a/CSS/style.css
+++ b/CSS/style.css
@@ -361,8 +361,8 @@ a {
     }
 
     .contact-form button {
-        font-size: 1em;
-        padding: 10px 18px;
+        font-size: 15px;
+        padding: 18px;
     }
 
     
